examples/test/testpolicy15008.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15008
  namespace: namespace3
spec:
  podSelector:
    matchLabels:
      key40: value22
      key17: value49
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value36
          key39: value13
          key42: value27
      podSelector:
        matchLabels:
          key46: value46
          key17: value35
